Updated desktop file

--- a/data/CPUInfo.desktop
+++ b/data/CPUInfo.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=CPUInfo
-Exec=/home/george/Projects/CPUInfo/cpuinfo
+Exec=cpuinfo
 Terminal=false
 Type=Application
 Icon=cpuinfo
