--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: cpuinfo
+Source: cpu-monitor-docklet
 Section: Utilities
 Priority: extra
 Maintainer: George Sofianos <georgesofianosgr@gmail.com>
@@ -11,11 +11,11 @@ Build-Depends: cmake (>= 2.8),
                libgranite-dev
 Standards-Version: 3.9.3
 
-Package: cpuinfo
+Package: cpu-monitor-docklet
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: Displays CPU Temperature & Usage
- CPUInfo is a minimal dock application designed for elementary OS.
+ CPU Monitor Docklet is a minimal dock application designed for elementary OS.
  .
  Features:
   - View CPU temperature from dock icon.
