--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: cmake (>= 2.8),
                libgtk-3-dev,
                libsensors4-dev,
                libgranite-dev
+               libunity-dev
 Standards-Version: 3.9.3
 
 Package: cpu-monitor-docklet
