--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: cmake (>= 2.8),
                libgtop2-dev,
                libgtk-3-dev,
                libsensors4-dev,
-               libgranite-dev
+               libgranite-dev,
                libunity-dev
 Standards-Version: 3.9.3
 
